# CHIP-8

./: .gitignore  Cargo.toml  README.md  assembler  generate_font.py
examples/: buzzer_test.ch8  clock.ch8  keypad_test.ch8  keypad_test2.ch8  random.ch8  random_loop.ch8
examples/src/: buzzer_test.asm  clock.asm  keypad_test.asm  keypad_test2.asm  random.asm  random_loop.asm  random_test.asm
src/: display.rs  font.rs  lib.rs  main.rs
