[package]
name = "chip8"
version = "0.1.0"
edition = "2021"
authors = ["Jaxson Pahukula <jaxpahu@gmail.com>"]
readme = "README.md"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
pixels = "0.13.0"
rand = "0.8.5"
rodio = "0.18.0"
winit = { version = "0.29", default-features = false, features = ["rwh_05", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"] }
winit_input_helper = "0.16.0"
